--- a/drivers/sensors/Kconfig
+++ b/drivers/sensors/Kconfig
@@ -880,6 +880,23 @@ config MLX90614_CRC
 
 endif # SENSORS_MLX90614
 
+config SENSORS_MCP9600
+	bool "MCP9600 Thermocouple Amplifier"
+	default n
+	select I2C
+	---help---
+		Enable driver support for the MCP9600 thermocouple amplifier
+
+if SENSORS_MCP9600
+
+config MCP9600_I2C_FREQUENCY
+	int "MCP9600 I2C frequency"
+	default 100000
+	range 10000 100000
+	depends on SENSORS_MCP9600
+
+endif # SENSORS_MCP9600
+
 config SENSORS_MCP9844
 	bool "MCP9844 Temperature Sensor"
 	default n
@@ -1540,18 +1557,18 @@ config SHT4X_I2C_FREQUENCY
 	default 400000
 	range 1 400000
 
+config SHT4X_THREAD_STACKSIZE
+    int "SHT4X worker thread stack size"
+	default 1024
+	---help---
+		The stack size for the worker thread that performs measurements
+
 config SHT4X_I2C_ADDR
 	hex "SHT4X I2C address"
 	default 0x44
 	range 0x44 0x46
 	---help---
 		Enables debug features for the SHT4X
-
-config SHT4X_FAHRENHEIT
-	bool "SHT4X use Fahrenheit"
-	default n
-	---help---
-		Configures read outputs of the SHT4X to be in Fahrenheit. Default uses Celsius.
 
 config SHT4X_LIMIT_HUMIDITY
 	bool "SHT4X limit humidity between 0-100%"
@@ -1564,12 +1581,6 @@ config SHT4X_CRC_LOOKUP
 	default n
 	---help---
 		Configures the SHT4X to do CRC checks with a lookup table. Default uses a bitwise CRC calculation.
-
-config SHT4X_DEBUG
-	bool "SHT4X debug support"
-	default n
-	---help---
-		Enables debug features for the SHT4X
 
 endif # SENSORS_SHT4X
 
