arm64/tbi: Unified TBI flags for MTE and software kasan
The TCMA flag is not critical, it will be set separately in "arm64_mte.c"

Signed-off-by: wangmingrong1 <wangmingrong1@xiaomi.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -151,6 +151,7 @@ menu "ARMv8.5 architectural features"
 
 config ARM64_MTE
 	bool "Memory Tagging Extension support"
+	select ARM64_TBI
 	default y
 
 endmenu # "ARMv8.5 architectural features"
@@ -163,6 +164,10 @@ config ARCH_SINGLE_SECURITY_STATE
 		security state(eg. Cortex-R82). For these Processors,
 		GIC or other ARM architecture feature will with different
 		configure
+
+config ARM64_TBI
+	bool "Top Byte Ignore support"
+	default n
 
 config ARM64_SMP_BUSY_WAIT
 	bool "Busy wait when SMP boot"
