--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -344,6 +344,7 @@ config MM_KASAN_GENERIC
 
 config MM_KASAN_SW_TAGS
 	bool "KAsan SW tags"
+	select ARM64_TBI
 	depends on ARCH_ARM64
 	---help---
 		KAsan based on software tags
