bcm2711/sdio: Support for EMMC interfaces on the BCM2711
This initial implementation sets up support for the EMMC interfaces on
the BCM2711. Only EMMC2 is tested since it is the interface of interest
(connects to uSD card). For some reason, interrupt forcing currently
does not work. Registers seem to be correctly manipulated otherwise.

Signed-off-by: Matteo Golin <matteo.golin@gmail.com>

--- a/arch/arm64/src/bcm2711/Kconfig
+++ b/arch/arm64/src/bcm2711/Kconfig
@@ -281,6 +281,36 @@ config BCM2711_SPI6
 
 endif # BCM2711_SPI
 
+#####################################################################
+# SDMMC Configuration
+#####################################################################
+
+config BCM2711_EMMC
+	bool "EMMC support"
+	select MMCSD
+	select MMCSD_SDIO
+	default n
+	---help---
+		Enables support for EMMC interfaces.
+
+if BCM2711_EMMC
+
+config BCM2711_EMMC1
+	bool "EMMC1 interface support"
+	depends on BCM2711_EMMC
+	default n
+	---help---
+		Enables support for the EMMC1 interface.
+
+config BCM2711_EMMC2
+	bool "EMMC2 interface support"
+	depends on BCM2711_EMMC
+	default n
+	---help---
+		Enables support for the EMMC2 interface.
+
+endif # BCM2711_EMMC
+
 endmenu # Broadcom BCM2711 Peripheral Selection
 
 endif # ARCH_CHIP_BCM2711
