--- a/boards/arm64/bcm2711/raspberrypi-4b/Kconfig
+++ b/boards/arm64/bcm2711/raspberrypi-4b/Kconfig
@@ -37,4 +37,12 @@ config RPI4B_DEBUG_BOOT
 	---help---
 		Enables the debug output of the Raspberry Pi 4B bootloader.
 
+config RPI4B_MOUNT_BOOT
+	bool "Mount boot partition"
+	depends on BCM2711_EMMC2
+	default n
+	---help---
+		Mounts the boot partition of the micro SD card to NuttX as a read/write
+		file system.
+
 endif # ARCH_BOARD_RASPBERRYPI_4B
